syntax = "proto3";

package protos;

option java_package = "io.github.sergkhram.proto";
option java_multiple_files = true;
option java_outer_classname = "DevicesProto";

service DevicesService {
  rpc getDeviceRequest(DeviceId) returns (DeviceProto) {};
  rpc getDevicesListRequest(GetDevicesListRequest) returns (GetDevicesListResponse) {};
  rpc postDeviceRequest(PostDeviceRequest) returns (DeviceProto) {};
}

message DeviceId {
  string id = 1;
}

message DeviceProto {
  string id = 1;
  string serial = 2;
  bool isActive = 3;
  OsTypeProto osType = 4;
  string state = 5;
  string name = 6;
  DeviceTypeProto deviceType = 7;
  string osVersion = 8;
  HostInfoProto host = 9;
}

enum OsTypeProto {
    ANDROID = 0;
    IOS = 1;
}

enum DeviceTypeProto {
    DEVICE = 0;
    SIMULATOR = 1;
}

message HostInfoProto {
  string id = 1;
  string name = 2;
  string address = 3;
  int32 port = 4;
  bool isActive = 5;
}

message GetDevicesListRequest {
  bool isSaved = 1;
  string stringFilter = 2;
  string hostId = 3;
}

message GetDevicesListResponse {
  repeated DeviceProto devices = 1;
}

message PostDeviceRequest {
  string serial = 1;
  bool isActive = 2;
  OsTypeProto osType = 3;
  string state = 4;
  string name = 5;
  DeviceTypeProto deviceType = 6;
  string osVersion = 7;
  HostInfoProto host = 8;
}