syntax = "proto3";

package hosts;

import "devices/devices.proto";

option java_package = "io.github.sergkhram.proto";
option java_multiple_files = true;
option java_outer_classname = "HostsProto";

service HostsService {
  rpc getHostRequest(GetHostRequest) returns (HostProto) {};
  rpc getHostsListRequest(GetHostsListRequest) returns (GetHostsListResponse) {};
}

message GetHostRequest {
  string id = 1;
}

message GetHostsListRequest {
  string stringFilter = 1;
}

message GetHostsListResponse {
  repeated HostProto hosts = 1;
}

message HostProto {
  string id = 1;
  string name = 2;
  string address = 3;
  int32 port = 4;
  bool isActive = 5;
  repeated devices.DeviceProto devices = 6;
}